--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ a {
   justify-content: space-between;
   background-color: var(--hero-background-color);
   padding: 0px 60px;
+  margin-bottom: 30px;
 }
 
 .header-logo {
@@ -54,7 +55,6 @@ a {
   display: flex;
   background-color: var(--hero-background-color);
   padding: 60px;
-  flex: 1;
 }
 
 .hero-title-text {
@@ -78,11 +78,12 @@ a {
 }
 
 .image {
-  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .information-section {
-  margin-top: 20px;
+  margin-top: 40px;
   background-color: white;
   text-align: center;
 }
@@ -101,7 +102,7 @@ a {
   display: flex;
   gap: 52px;
   justify-content: center;
-  margin-bottom: 35px;
+  margin-bottom: 50px;
 }
 
 .info-section-text {
@@ -114,6 +115,9 @@ a {
 
 .info-section img {
   width: 150px;
+  border-color: #3882f6;
+  border: 3px solid #3882f6;
+  border-radius: 18px;
 }
 
 .testimonial-container {
@@ -144,6 +148,40 @@ button {
   padding: 4px 15px;
 }
 
+.cta-section-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 70px 0px;
+  background-color: var(#fff);
+}
+
+.cta-container {
+  display: flex;
+  padding: 40px 60px;
+  gap: 40px;
+  color: var(--primary-color);
+  border-color: var(--primary-color);
+  border-radius: 8px;
+  background-color: var(--button-color);
+}
+
+.cta-text-left {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  padding: 0 70px;
+}
+
+.cta-title {
+  font-weight: 900;
+}
+
+.cta-button {
+  border: 2px solid white;
+  padding: 5px 40px;
+}
+
 .footer {
   bottom: 0;
   left: 0;
@@ -152,7 +190,7 @@ button {
   background-color: var(--hero-background-color);
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 30px;
 }
 
 .footer-text {
